Bug 159378 - kgpg doesn't open encrypted document
Summary: kgpg doesn't open encrypted document
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-15 23:35 UTC by Robert Piasek
Modified: 2008-03-16 23:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Piasek 2008-03-15 23:35:00 UTC
Version:           1.7.3 (using KDE 4.0.2)
Installed from:    Gentoo Packages
Compiler:          GCC 4.2.3 x86_64, nocona -02 -pipe
OS:                Linux

When I try to open encrypted document from Konqueror or Dolphin Kgpg starts but doesn't do anything.
When I run kgpg manually from the console I get the following error message when I try to open the file:

Object::connect: No such signal MyView::importedKeys(QStringList)

I started from recompiling kgpg and finished on recompiling all packages kgpg is dependent to end up with the same error message.
Comment 1 Rolf Eike Beer 2008-03-16 23:28:59 UTC
SVN commit 786393 by dakon:

Don't pass empty arguments to gpg on file decryption

BUG:159378


 M  +4 -1      kgpg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=786393