Don't pass empty arguments to gpg on file decryption

BUG:159378

svn path=/branches/KDE/4.0/kdeutils/kgpg/; revision=786393